--- a/cliente.ipynb
+++ b/cliente.ipynb
@@ -130,25 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open('tablas.json', encoding='utf-8') as f:\n",
+    "with open('./data/tablas.json', encoding='utf-8') as f:\n",
     "    tablas = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tabla': 'Bsh016', 'descripcion': '', 'grupo': 'Tablas Básicas'}\n",
       "{'tabla': 'FBC7A3', 'descripcion': 'Átomo Crédito', 'grupo': 'Tablas Básicas'}\n",
       "{'tabla': 'Fst106', 'descripcion': 'Tipo de Alta', 'atributos': [{'codigo': 'TpoAltaC', 'descripcion': 'Tipo de Alta', 'tipo': 'N (3.0)', 'clave': 'Y'}, {'codigo': 'TpoAltaDsc', 'descripcion': 'Descripción', 'tipo': 'C (30)', 'clave': 'N'}, {'tabla': 'Fst107', 'descripcion': 'Canales de Distribución', 'atributos': [{'codigo': 'DstCod', 'descripcion': 'Código', 'tipo': 'N (5.0)', 'clave': 'Y'}, {'codigo': 'DstTxt', 'descripcion': 'Descripción', 'tipo': 'C (30)', 'clave': 'N'}]}, {'tabla': 'Fst108', 'descripcion': 'Hobbies', 'atributos': [{'codigo': 'HobCod', 'descripcion': 'Código', 'tipo': 'N (3.0)', 'clave': 'Y'}, {'codigo': 'HobTxt', 'descripcion': 'Descripción', 'tipo': 'C (30)', 'clave': 'N'}]}, {'tabla': 'Fst109', 'descripcion': 'Clubes', 'atributos': [{'codigo': 'ClubCod', 'descripcion': 'Código', 'tipo': 'N (5.0)', 'clave': 'Y'}, {'codigo': 'ClubTxt', 'descripcion': 'Descripción', 'tipo': 'C (30)', 'clave': 'N'}]}], 'grupo': 'Tablas Básicas'}\n",
       "{'tabla': 'FSE111', 'descripcion': 'Extensión cheques', 'grupo': 'EXTENSIONES'}\n",
